--- a/src/main/res/values-w820dp/strings.xml
+++ b/src/main/res/values-w820dp/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Demineur</string>
     <string name="score">Score</string>
+    <string name="scores">Scores</string>
+    <string name="reprendre">Reprendre</string>
     <string name="todo">TODO</string>
 
     <string name="instruction_title">Instructions</string>
