--- a/RapportLaTeX/rapport.tex
+++ b/RapportLaTeX/rapport.tex
@@ -105,7 +105,11 @@ public class Main {
 
 
 \section{Conclusion générale}
-	Ce cours était bien utile, notamment en ce qui concerne la création d'application mobile.
+	Cette projet était une bonne expérience, et qui plus était enrichissante.
+Grâce elle, elle nous a permis de pouvoir développer des applications sur les deux système,
+Android et iOS, de créer plusieurs projets,cette UE nous permis de pouvoir travailler en autonomie
+et de ce fait, effectuer nos propres recherches, tester de nouvelles choses, faire des erreurs, et en
+apprendre davantage grâce à elles.
 
 
 %%% La bibliographie:
