--- a/RapportLaTeX/rapport.tex
+++ b/RapportLaTeX/rapport.tex
@@ -16,7 +16,7 @@
 
 
 \title{\textbf{ Rapport - Developpement Mobile \\ Démineur}}
-\author{Kamarouzamane Combo, Jeremie Legros\\
+\author{Kamarouzamane Combo, Jérémy Legros\\
 		L3 informatique\\
 	  }
 \date{\today}
