--- a/RapportLaTeX/presentation_1.tex
+++ b/RapportLaTeX/presentation_1.tex
@@ -115,14 +115,28 @@
 
 %\subsection{Subsection Example} % A subsection can be created just before a set of slides with a common theme to further break down your presentation into chunks
 
+
 \begin{frame}
-\frametitle{Conception UML}
+	\frametitle{Conception UML}
+	\begin{block}{Définition}
+ 		UML : Unified modeling language
+	\end{block}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Conception UML}
+	\begin{block}{Diagramme de classe}
+ 		\includegraphics[scale=0.10]{Images/ClassDiagram.jpg}
+	\end{block}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
-
+	\begin{block}{Diagramme de cas d'utilisations}
+		 \includegraphics[scale=0.13]{Images/UseCaseDiagram.jpg}
+	\end{block}
 \end{frame}
 
 %------------------------------------------------
@@ -157,6 +171,10 @@ But: il vous faut déterminer l'emplacement de toutes les mines.
 
 %------------------------------------------------
 \begin{frame}
+\begin{block}{Portion de code}
+	\includegraphics[scale=0.65]{Images/BombeRandom.png}
+	\includegraphics[scale=0.65]{Images/Victoire.png}
+\end{block}
    
 \end{frame}
 
@@ -168,8 +186,34 @@ But: il vous faut déterminer l'emplacement de toutes les mines.
 
 \begin{frame}
 \frametitle{iOS}
+	\begin{block}{Storyboard et programmation  : MVC}
+ 		\includegraphics[scale=0.3]{Images/MVC.png}
+	\end{block}
+\end{frame}
+
+\begin{frame}
+\frametitle{iOS}
+\begin{block}{Storyboard et programmation }
+ 		\includegraphics[scale=0.30]{Images/controlDrag.png}
+	\end{block}
+
+\end{frame}
 
 
+\begin{frame}
+	\frametitle{iOS}
+	\begin{block}{Storyboard et programmation}
+ 		\includegraphics[scale=0.2]{Images/controlDragCollection.png}
+	\end{block}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{iOS}
+	\frametitle{iOS}
+	\begin{block}{Persistance des données}
+ 		\includegraphics[scale=0.30]{Images/persistanceSliders.png}
+	\end{block}
 \end{frame}
 
 %---------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -178,8 +222,7 @@ But: il vous faut déterminer l'emplacement de toutes les mines.
 
 \begin{frame}
 \frametitle{Conclusion}
-
-
+	\Huge{\centerline{Démonstration}}
 \end{frame}
 
 %------------------------------------------------
